syntax = "proto3";
package wiradata.inventories;

option go_package = "pb/inventories;inventories";
option java_package = "com.wiradata.erpapplication.inventories";
option java_multiple_files = true;

import "inventories/receive_return_message.proto";
import "inventories/generic_message.proto";

message ListReceiveReturnRequest {
  Pagination pagination = 1;
  string branch_id = 2;
  string receive_id = 3;
}

message ReceiveReturnPaginationResponse {
  Pagination pagination = 1;
  string branch_id = 2;
  string receive_id = 3;
  uint32 count = 4;
}

message ListReceiveReturnResponse {
  ReceiveReturnPaginationResponse pagination = 1;
  ReceiveReturn ReceiveReturn = 2; 
}

service ReceiveReturnService {
  rpc Create(ReceiveReturn) returns (ReceiveReturn) {}
  rpc Update(ReceiveReturn) returns (ReceiveReturn) {}
  rpc View(Id) returns (ReceiveReturn) {}
  rpc List(ListReceiveReturnRequest) returns (stream ListReceiveReturnResponse) {}
}