syntax = "proto3";
package wiradata.inventories;

option go_package = "pb/inventories;inventories";

import "product_message.proto";
import "shelve_message.proto";

message ReceiveReturnDetail {
  string id = 1;
  string receive_return_id = 2;
  Product product = 3;
  Shelve shelve = 4;
  string code = 5;
  uint32 qty = 6;
}